gitops/app-bom/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stress-app
  namespace: app-bom
spec:
  selector:
    app: stress-app
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
